k8s/halo/halo-node01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halo
  namespace: blog-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: halo
  template:
    metadata:
      labels:
        app: halo
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-master-01
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      volumes:
        - name: halo-data
          persistentVolumeClaim:
            claimName: halo-pvc
      containers:
        - name: halo
          image: registry.fit2cloud.com/halo/halo:2.21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
              name: http
          args:
            - --spring.r2dbc.url=r2dbc:pool:mysql://mysql.blog-system.svc.cluster.local:3306/halo
            - --spring.r2dbc.username=halo
            - --spring.r2dbc.password=admin
            - --spring.sql.init.platform=mysql
            - --halo.external-url=http://blog.example.com
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          volumeMounts:
            - name: halo-data
              mountPath: /root/.halo2
---
apiVersion: v1
kind: Service
metadata:
  name: halo
  namespace: blog-system
spec:
  selector:
    app: halo
  ports:
    - name: http
      port: 8090
      targetPort: 8090
      nodePort: 30090
  type: NodePort
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: halo
  namespace: blog-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: blog.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: halo
              servicePort: 8090
